# pothole-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  STRUCTURE.md  main.py  mcp.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_client.py  test_local_server.py
config/: .env.example  requirements.txt
docs/guides/: getting-started.md
docs/guides/client/: dedalus-docs-mcp.md  using-deployed-servers.md
docs/guides/server/: advanced-tools.md  building-mcp-servers.md  dedalus-deployment.md
docs/hackathon/: add-your-ideas.md  hackathon-rules.md  yc-agents-hackathon.md
examples/: Dockerfile  client.py  requirements.txt  workflows.py
scripts/: setup.sh
src/: client.ts  config.ts  index.ts  main.py  server.ts  types.ts
src/tools/: hazards.ts  index.ts
src/transport/: http.ts  stdio.ts
tests/: test_rate_limit.py  test_server.py
