[project]
name = "hazard-mcp"
version = "1.0.0"
description = "MCP server for serving and querying documentation"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "python-dotenv",
    "openai",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.scripts]
main = "src.main:main"