[project]
name = "hazard-mcp"
version = "1.0.0"
description = "MCP server for hazards analytics and projections"
requires-python = ">=3.10"
dependencies = [
  "mcp",
  "supabase>=2.6.0",
  "python-dotenv",
  "openai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.scripts]
main = "src.main:main"
